Set amounts and error message to default

--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
                     </fieldset>
                     <p>
                         <label for="persons">Number of People</label>
-                        <span id="persons-invalidation-message" class="invalidation-message" aria-live="assertive">Can’t be zero</span>
+                        <span id="persons-invalidation-message" class="invalidation-message" aria-live="assertive"></span>
                         <input id="persons" name="persons" type="number" min="1" placeholder="0" required aria-describedby="persons-invalidation-message">
                     </p>
                 </div>
                 <div class="result">
                     <dl>
                         <dt>Tip Amount <span class="precision" aria-label="per person">/ person</span></dt>
-                        <dd>$4.27</dd>
+                        <dd>$0.00</dd>
                         <dt>Total <span class="precision" aria-label="per person">/ person</span></dt>
-                        <dd>$32.79</dd>
+                        <dd>$0.00</dd>
                     </dl>
                     <p>
                         <input type="reset" value="Reset">
