--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <div class="parameters">
                     <p>
                         <label for="bill">Bill</label>
-                        <input id="bill" name="bill" type="number" min="0" step="0.01" placeholder="0">
+                        <span id="bill-invalidation-message" class="invalidation-message" aria-live="assertive"></span>
+                        <input id="bill" name="bill" type="number" min="0" step="0.01" placeholder="0" aria-describedby="bill-invalidation-message">
                     </p>
                     <fieldset>
                         <legend>Select Tip %</legend>
@@ -48,19 +49,16 @@
                                 <label for="tip-preselection-5">50%</label>
                             </li>
                             <li>
-                                <input type="radio" id="tip-preselection-6" name="tip-preselection" value="Custom">
-                                <label for="tip-preselection-6">Custom</label>
-                            </li>
-                            <li>
                                 <label for="tip-custom">Custom</label>
-                                <input id="tip-custom" name="tip-custom" type="number" min="0" max="100" placeholder="Custom">
+                                <span id="tip-custom-invalidation-message" class="invalidation-message" aria-live="assertive"></span>
+                                <input id="tip-custom" name="tip-custom" type="number" min="0" max="100" placeholder="Custom" aria-describedby="tip-custom-invalidation-message">
                             </li>
                         </ul>
                     </fieldset>
                     <p>
                         <label for="persons">Number of People</label>
                         <span id="persons-invalidation-message" class="invalidation-message" aria-live="assertive"></span>
-                        <input id="persons" name="persons" type="number" min="1" placeholder="0" required aria-describedby="persons-invalidation-message">
+                        <input id="persons" name="persons" type="number" min="1" placeholder="0" aria-describedby="persons-invalidation-message">
                     </p>
                 </div>
                 <div class="result">
