Implemented reset button disabling management

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <dd>$0.00</dd>
                     </dl>
                     <p>
-                        <input type="reset" value="Reset">
+                        <input type="reset" value="Reset" disabled>
                     </p>
                 </div>
             </form>
